# irc-client

./: alembic.ini  docker-compose.yaml  pyproject.toml
irc/adapters/db/: database.py
irc/adapters/model/: model.py
irc/adapters/repository/: channel_repository.py  message_repository.py  user_repository.py
irc/port/: channel_port.py  message_port.py  user_port.py
irc/usecase/: channel_usecase.py  connection_usecase.py  message_usecase.py  user_usecase.py
migrations/: env.py
migrations/versions/: 0def57e29481_create_tables.py
